--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "axios": "^1.4.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
-    "mysql": "^2.18.1",
+    "ioredis": "^5.3.2",
     "mysql2": "^3.6.0",
+    "nestjs-redis": "^1.3.3",
     "prom-client": "^14.2.0",
+    "redis": "^4.6.10",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.17"
